--- a/BlazorApp1/Properties/launchSettings.json
+++ b/BlazorApp1/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7157;http://localhost:5298",
+      "applicationUrl": "https://localhost:7157;http://localhost:5298;https://apirep-2.onrender.com",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
